--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -4,7 +4,7 @@ body, div, ul, li, p {
 }
 
 body {
-	font-family: "Lucida Grenda", "Microsoft YaHei", sans-serif;
+	font-family: "Heiti SC", "Lucida Grenda", "Microsoft YaHei", sans-serif;
 	font-size: 14px;
 }
 
@@ -88,7 +88,14 @@ body {
 #menubar {
 	width: 100%;
 	height: 40px;
-	background: url(../images/menu.png);
+	background: #ca1111; /* Old browsers */
+	background: -moz-linear-gradient(top, #ca1111 0%, #941818 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ca1111), color-stop(100%,#941818)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #ca1111 0%,#941818 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #ca1111 0%,#941818 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #ca1111 0%,#941818 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #ca1111 0%,#941818 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ca1111', endColorstr='#941818',GradientType=0 ); /* IE6-9 */
 	box-shadow: 0px 0 10px 0 rgba(0, 0, 0, .5);
 	z-index: 50;
 }
@@ -97,7 +104,14 @@ body {
 	width: 1000px;
 	height: 100%;
 	margin: 0 auto;
-	background: url(../images/menu.png);
+	background: #ca1111; /* Old browsers */
+	background: -moz-linear-gradient(top, #ca1111 0%, #941818 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ca1111), color-stop(100%,#941818)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #ca1111 0%,#941818 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #ca1111 0%,#941818 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #ca1111 0%,#941818 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #ca1111 0%,#941818 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ca1111', endColorstr='#941818',GradientType=0 ); /* IE6-9 */
 }
 
 .menubar-content-menu {
@@ -438,7 +452,7 @@ body {
 .newsdot {
 	width: 20px;
 	height: 23px;
-	background: url(../images/dot.png) no-repeat;
+	background: url(../images/dot.bmp) no-repeat;
 	background-position: 50% 50%;
 }
 
@@ -544,11 +558,7 @@ only screen and (min-device-pixel-ratio: 1.3),
 only screen and (min-resolution: 120dpi) {
   #banner-content-right-logo, #bottom-logo{
     background-image:url(../images/tsxtlogo@2x.png) !important;
-    background-size: 75px 74px !important;
-  }
-  .newsdot, .item_dot {
-  	background-image:url(../images/dot@2x.png) !important;
-    background-size: 7px 6px !important;
+    background-size: 75px 75px !important;
   }
   #bottom-left-search label {
   	background-image:url(../images/sbutton@2x.png) !important;
