--- a/CS_WEB/css/index.css
+++ b/CS_WEB/css/index.css
@@ -191,7 +191,7 @@
 
 .item_dot {
 	width: 10px;
-	background: url(../images/dot.bmp) no-repeat;
+	background: url(../images/dot.gif) no-repeat;
 	background-position: 50% 50%;
 }
 
@@ -325,4 +325,3 @@
 	background-color: #000;
 	z-index: 5;
 }
-
