--- a/CS_WEB/css/transition.css
+++ b/CS_WEB/css/transition.css
@@ -6,7 +6,7 @@
 
 .gallery_container:hover {
 	z-index: 2;
-    box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.5);
 	left: -10px;
 	top: -10px;
 	width: 135px;
@@ -20,4 +20,8 @@
 .gallery_container:hover .gallery_image {
 	-webkit-filter: blur(2px);
 	filter: blur(2px);
+}
+
+.gallery_container:hover .gallery_padding {
+	opacity: 0;
 }
