--- a/CS_WEB/css/index.css
+++ b/CS_WEB/css/index.css
@@ -24,7 +24,7 @@
 	min-height: 350px;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: 50% 50%;
+	background-position: center;
 	display: block;
 	-ms-behavior: url(../backgroundsize.min.htc);
 	position: relative;
@@ -217,22 +217,19 @@
 	height: 140px;
 }
 
-.image {
-	width:160px;
-	height:160px;
-	padding: 10px 10px 10px 10px;
-}
 .image_container {
-	width: 100%;
-	height: 100%;
-	background-repeat: no-repeat;
+	width: 160px;
+	height: 160px;
+	margin: 10px;
 	display: block;
 	overflow: hidden;
-	background-position: 50% 50% !important;
-	background-size: cover !important;
 	position: relative;
 	border-radius:10px;
-	-ms-behavior: url(../backgroundsize.min.htc);
+}
+
+.image_container img {
+	width: 100%;
+	height: 100%;
 }
 
 .image_popup {
@@ -245,16 +242,13 @@
 	background-color: #000;
 	opacity: 0.6;
 	filter: alpha(opacity=60);
-	-webkit-transition: 0.1s;
-	transition: 0.1s;
-}
-
-.image_popup a {
 	text-decoration: none;
 	line-height: 45px;
 	font-size: large;
 	color: #fff;
 	padding-left: 10px;
+	-webkit-transition: 0.1s;
+	transition: 0.1s;
 }
 
 .gallery {
