--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -390,6 +390,8 @@ body {
 	height: 100%;
 	width: 100px;
 	text-align: center;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 	box-shadow: 2px 0 10px -2px rgba(0, 0, 0, .5);
 	float: left;
 }
