--- a/CS_WEB/css/index.css
+++ b/CS_WEB/css/index.css
@@ -230,6 +230,7 @@
 .image_container img {
 	width: 100%;
 	height: 100%;
+	border:none;
 }
 
 .image_popup {
@@ -310,6 +311,7 @@
 	position: absolute;
 	height: 100%;
 	width: 100%;
+	border:none;
 }
 
 .gallery_padding {
