--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -121,21 +121,25 @@ body {
 }
 
 .menubar-content-menu {
-	width: 100px;
+	width: auto;
 	height: 100%;
 	float: left;
 	line-height: 40px;
 	text-align: center;
+	padding-left: 20px;
+	padding-right: 20px;
 	background: none;
 	filter: glow(color=black,strength=1);
 }
 
 #menubar-content-helper {
-	width: 100px;
+	width: auto;
 	height: 100%;
 	float:right;
 	line-height: 40px;
 	text-align: center;
+	padding-left: 20px;
+	padding-right: 20px;
 	filter: glow(color=black,strength=1);
 }
 
@@ -330,18 +334,13 @@ body {
 }
 
 #sidebar_header {
-	width: 100%;
 	height: 33px;
 	border-bottom: 2px solid #89181b;
-}
-
-#sidebar_header p {
 	line-height: 33px;
-	width: auto;
 	text-align: right;
 	display: block;
 	font-size: 16px;
-	margin-right: 10px;
+	padding-right: 10px;
 	text-shadow: 0 0 4px rgba(0, 0, 0, .5)
 }
 
@@ -386,9 +385,11 @@ body {
 
 #loc_prompt {
 	height: 100%;
-	width: 100px;
+	width: auto;
 	text-align: center;
 	line-height: 35px;
+	padding-left: 20px;
+	padding-right: 20px;
 	font-size:small;
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
@@ -398,10 +399,12 @@ body {
 
 #loc_entry_1, #loc_entry_2 {
 	height: 100%;
-	width: 100px;
+	width: auto;
 	text-align: center;
 	float: left;
 	line-height: 35px;
+	padding-left: 20px;
+	padding-right: 20px;
 	margin-right: -10px;
 	font-size:small;
 }
@@ -412,12 +415,11 @@ body {
 
 #loc_entry_3 {
 	height: 100%;
-	width: 320px;
+	width: auto;
 	text-align: left;
-	float: left;
 	line-height: 35px;
-	padding-left:25px;
-	padding-right:20px;
+	padding-left: 25px;
+	padding-right: 20px;
 	white-space: nowrap;
 	overflow:hidden;
 	text-overflow: ellipsis;
@@ -434,7 +436,7 @@ body {
 	display: none;
 }
 
-#loc_entry_1 a, #loc_entry_1 p, #loc_entry_2 a, #loc_entry_2 p {
+#loc_entry_1 a, #loc_entry_2 a {
 	font-size:small;
 	text-decoration:none;
 	color: #000;
