--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -5,13 +5,21 @@ body, div, ul, li, p {
 body {
 	font-family: "Heiti SC", "Lucida Grenda", "Microsoft YaHei", sans-serif;
 	font-size: 14px;
-	-webkit-font-smoothing: subpixel-antialiased;
+	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 }
 #header {
 	width: 100%;
 	min-width: 1000px;
 	height: 155px;
+	position: absolute;
+	top: 0px;
+	z-index: 10;
+	-webkit-transition: 1s;
+	transition: 1s;
+}
+#header.hidden {
+	top: -155px;
 }
 #content {
 	width: 1000px;
@@ -19,6 +27,7 @@ body {
 	margin-right: auto;
 	min-height: 550px;
 	position: relative;
+	margin-top: 155px;
 }
 #footer {
 	position: relative;
@@ -286,6 +295,11 @@ body {
 	box-shadow: 0 0 5px 0px rgba(0, 0, 0, .5);
 	border-radius: 0 0 10px 10px;
 	z-index: 0;
+	-webkit-transition: 1.5s;
+	transition: 1.5s;
+}
+#slide.hidden {
+	top: -510px;
 }
 #slide .dot {
 	-webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
@@ -386,31 +400,31 @@ body {
 .itemlist a:hover {
 	color: #89181b;
 }
-#s1c3 {
+#column1 {
 	width: 22%;
 	float: left;
 }
-#s1c2 {
+#column2 {
 	width: 74%;
 	float: right;
 }
-#s5c2 {
+#column3 {
 	width: 730px;
 	float: left;
 }
-#s4 {
+#column4 {
 	width: 230px;
 	float: right;
 }
-#s6c1 {
-	width: 370px;
+#column5 {
+	width: 360px;
 	float: left;
 }
-#s6c1 .itemlist a {
-	width: 260px;
+#column5 .itemlist a {
+	width: 250px;
 }
-#s7 {
-	width: 590px;
+#column6 {
+	width: 600px;
 	float: right;
 }
 .column {
@@ -420,33 +434,58 @@ body {
 	width: 100%;
 	height: 27px;
 	border-bottom: 2px solid #671111;
-	margin-bottom: 4px;
 	box-shadow: 0px 2px 2px -2px #671111;
+	overflow: hidden;
+	position: relative;
+	-webkit-transition: 0.4s linear;
+	transition: 0.4s linear;
+}
+.col_header.hidden {
+	width: 0%;
 }
 .header_title {
-	width: 50%;
-	float: left;
 	padding-left: 5px;
 	font-size: large;
 	text-shadow: 0 0 3px rgba(0, 0, 0, .3);
+	position: absolute;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
 }
 .header_more {
-	width: 55px;
-	float: right;
 	text-align: right;
 	padding-right: 5px;
 	line-height: 27px;
 	font-size: 12px;
+	position: absolute;
+	right: 0px;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
 }
 .header_more a {
 	color: #808080;
 	text-decoration: none;
+}
+.header_title.hidden, .header_more.hidden {
+	top: 30px;
+}
+.itemlist_container {
+	padding-top: 4px;
+	width: 100%;
+	height: 125px;
+	position: relative;
+	overflow: hidden;
 }
 .itemlist {
 	width: 100%;
 	padding-top: 2px;
 	padding-right: 5px;
 	line-height: 20px;
+	position: relative;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
+}
+.itemlist.hidden {
+	top: -125px;
 }
 .item_dot {
 	width: 10px;
@@ -468,14 +507,24 @@ body {
 	text-align: right;
 	font-size: small;
 }
+.imagelist_container {
+	width: 720px;
+	height: 180px;
+	position: relative;
+	overflow: hidden;
+}
 .imagelist {
 	width: 720px;
-	margin-left: auto;
-	margin-right: auto;
+	position: absolute;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
 }
 .imagelist a {
 	float: left;
 	position: relative;
+}
+.imagelist.hidden {
+	top: -180px;
 }
 .image_container {
 	width: 160px;
@@ -508,13 +557,20 @@ body {
 	-webkit-transition: 0.1s;
 	transition: 0.1s;
 }
+.gallerylist_container {
+	width: 600px;
+	height: 140px;
+	position: relative;
+	overflow: hidden;
+}
 .gallery {
 	width: 575px;
-	height: 110px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 15px;
-	margin-bottom: 15px;
+	height: 140px;
+	position: absolute;
+	left: 12px;
+	top: 15px;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
 }
 .gallery a {
 	float: left;
@@ -522,6 +578,9 @@ body {
 	overflow: visible;
 	width: 115px;
 	height: 110px;
+}
+.gallery.hidden {
+	top: -140px;
 }
 .gallery_container {
 	position: absolute;
