--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -5,7 +5,7 @@ body, div, ul, li, p {
 body {
 	font-family: "Heiti SC", "Lucida Grenda", "Microsoft YaHei", sans-serif;
 	font-size: 14px;
-	-webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: subpixel-antialiased;
 	-webkit-text-size-adjust: 100%;
 }
 #header {
@@ -437,8 +437,8 @@ body {
 	box-shadow: 0px 2px 2px -2px #671111;
 	overflow: hidden;
 	position: relative;
-	-webkit-transition: 0.4s linear;
-	transition: 0.4s linear;
+	-webkit-transition: 0.2s linear;
+	transition: 0.2s linear;
 }
 .col_header.hidden {
 	width: 0%;
