--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -287,6 +287,14 @@ body {
 	line-height: 18px;
 	filter: glow(color=black,strength=1);
 }
+#slide_container {
+	position: relative;
+	-webkit-transition: 1s;
+	transition: 1s;
+}
+#slide_container.hidden {
+	top: -510px;
+}
 #slide {
 	width: 100%;
 	background: #e0e0e0;
@@ -295,11 +303,6 @@ body {
 	box-shadow: 0 0 5px 0px rgba(0, 0, 0, .5);
 	border-radius: 0 0 10px 10px;
 	z-index: 0;
-	-webkit-transition: 1.5s;
-	transition: 1.5s;
-}
-#slide.hidden {
-	top: -510px;
 }
 #slide .dot {
 	-webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
