--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -106,7 +106,7 @@ body {
 	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, .5);
 	z-index: 50;
 }
-.menubar-float {
+#menubar.float {
 	position: fixed;
 	top: 0px;
 }
@@ -644,7 +644,7 @@ body {
 #sidebar {
 	width: 180px;
 }
-.sidebar_float {
+#sidebar.float {
 	position: fixed;
 	top: 50px;
 }
