--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -28,19 +28,16 @@ body {
 	position: absolute;
 	top: -155px;
 }
-#index {
+#main {
 	width: 1000px;
+	min-height: 600px;
+	height: calc(100% - 460px);
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
 }
-#content {
-	width: 1000px;
-	margin-left: auto;
-	margin-right: auto;
-	min-height: 600px;
-	height: calc(100% - 460px);
-	position: relative;
+#index, #content {
+	width: 100%;
 }
 #footer {
 	position: relative;
